# skill-builder

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: __main__.py  agent.py  config.py  server.py  skills_registry.py
app/skills/skill-quality-checklist/: SKILL.md
app/skills/skill-quality-checklist/references/: scoring-rubric.md
app/skills/skill-writing-guide/: SKILL.md
app/skills/skill-writing-guide/references/: anti-patterns.md  example-skills.md
